cabal-version:      3.6
name:               eva-site
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Simon Reitinger
maintainer:         simre4775@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable eva-site
    main-is:          Main.hs
    other-modules:
        Page,
        Pages,
        Pages.Index,
        Windi
    default-extensions:
        DuplicateRecordFields,
        OverloadedLabels,
        OverloadedStrings

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0, lucid2, shake, PyF, optics-core, text, containers
    hs-source-dirs:   app
    default-language: GHC2021
